# miso-starter-closure-compiler

./: Main.hs  app.cabal  deploy.sh  index.html  stack.yaml
