name:                app
version:             0.1.0.0
synopsis:            First miso app
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable app
  main-is:             Main.hs
  if !impl(ghcjs)
    build-depends:
      wai,
      wai-app-static,
      warp,
      websockets
  build-depends:       base
                     , miso
                     , containers
                     , aeson
                     , jsaddle-warp
                     , transformers
  default-language:    Haskell2010
